--- a/wallace-2019/nginx.conf
+++ b/wallace-2019/nginx.conf
@@ -142,7 +142,11 @@ http {
         }
         location /msgapis {
             rewrite  ^/msgapis/(.*)$ /$1 break;
-            proxy_pass http://127.0.0.1:9060;
+            proxy_pass http://127.0.0.1:5000;
+        }
+        location /isapis {
+            rewrite  ^/isapis/(.*)$ /$1 break;
+            proxy_pass http://127.0.0.1:5000;
         }
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
